--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "react": "^19.1.0",
+    "vite": "^6.3.5"
   }
 }
