--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,13 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "axios": "^1.10.0",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "remixicon": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
