--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,10 +14,12 @@
     "@gsap/react": "^2.1.2",
     "axios": "^1.10.0",
     "gsap": "^3.13.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "remixicon": "^4.6.0"
+    "remixicon": "^4.6.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
